# local-achievements

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile.toml  README.md  build.rs  local-achievements.desktop  reliquarian.desktop
.github/workflows/: rust.yml
crates/battlenet/: Cargo.toml
crates/battlenet/src/: secure.rs
crates/battlenet/src/api/: api.rs
crates/battlenet/src/api/endpoint/: auth.rs  session.rs  userinfo.rs
crates/battlenet/src/components/: content.rs  diablo3.rs  profile.rs
crates/battlenet/src/components/starcraft2/: achievement.rs  campaigns.rs  summary.rs
crates/battlenet/src/data/: mod.rs  region.rs  result.rs  user.rs
crates/battlenet/src/data/starcraft2/: criteria.rs  enums.rs  reward.rs
crates/battlenet/src/data/starcraft2/profile/snapshot/: league.rs  snapshot.rs
crates/components/: Cargo.toml
crates/data/: Cargo.toml
crates/data/src/: constants.rs  format.rs
crates/data/src/enums/: platform.rs
crates/data/src/io/: io.rs
crates/epicgamesstore/: Cargo.toml
crates/epicgamesstore/src/: secure.rs
crates/epicgamesstore/src/api/: api.rs
crates/epicgamesstore/src/api/endpoint/: achievement.rs  mod.rs  player.rs  progress.rs  unified.rs
crates/epicgamesstore/src/components/: achievement.rs  profile.rs  settings.rs
crates/epicgamesstore/src/data/: result.rs  settings.rs  user.rs
crates/epicgamesstore/src/data/achievement/: achievement.rs  mod.rs  strings.rs
crates/gog/: Cargo.toml
crates/gog/src/: secure.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/net/: Cargo.toml
crates/net/src/: oauth.rs  session.rs
crates/net/src/limiter/: limiter.rs
crates/net/src/limiter/request/: operation.rs  request.rs
crates/reliquarian-battlenet/: Cargo.toml
crates/reliquarian-battlenet/src/: lib.rs
crates/reliquarian-components/: Cargo.toml
crates/reliquarian-components/src/: extensions.rs  lib.rs
crates/reliquarian-data/: Cargo.toml
crates/reliquarian-data/src/: constants.rs  filter.rs  lib.rs  settings.rs  state.rs
crates/reliquarian-data/src/enums/: channel.rs  mod.rs
crates/reliquarian-data/src/io/: io.rs  location.rs  mod.rs
crates/reliquarian-data/src/settings/: language.rs  mod.rs  platforms.rs  settings.rs
crates/reliquarian-epicgamesstore/: Cargo.toml
crates/reliquarian-gog/: Cargo.toml
crates/reliquarian-macros/: Cargo.toml
crates/reliquarian-net/: Cargo.toml
crates/reliquarian-net/src/: lib.rs
crates/reliquarian-retroachievements/: Cargo.toml
crates/reliquarian-rpcs3/: Cargo.toml
crates/reliquarian-rpcs3/src/api/data/: conf.rs
crates/reliquarian-rpcs3/src/components/: game.rs  list.rs  profile.rs  refresh.rs  settings.rs  trophy.rs
crates/reliquarian-rpcs3/src/data/: game.rs  io.rs  mod.rs  trophy.rs  user.rs
crates/reliquarian-steam/: Cargo.toml
crates/reliquarian-steam/src/: secure.rs
crates/reliquarian-steam/src/api/: api.rs  mod.rs
crates/reliquarian-steam/src/api/endpoint/: appinfo.rs  gameschema.rs  globalpercentages.rs  mod.rs  ownedgames.rs  playerachievements.rs  playersummaries.rs  recentlyplayedgames.rs  sharedlibraryapps.rs
crates/reliquarian-steam/src/components/: achievement.rs  content.rs  game.rs  list.rs  profile.rs  refresh.rs  settings.rs
crates/reliquarian-steam/src/data/: achievement.rs  game.rs  io.rs  mod.rs  operation.rs  playtime.rs  settings.rs  user.rs
crates/retroachievements/: Cargo.toml
crates/retroachievements/src/: secure.rs
crates/rpcs3/: Cargo.toml
crates/rpcs3/src/: lib.rs
crates/rpcs3/src/api/: api.rs
crates/rpcs3/src/api/data/: mod.rs
crates/rpcs3/src/components/: content.rs  game.rs  profile.rs  settings.rs
crates/rpcs3/src/data/: settings.rs  user.rs
crates/steam/: Cargo.toml
crates/steam/src/: secure.rs
css/: achievements.css  app.css  base.css  content.css  games.css  nav.css  variables.css
godot/: .editorconfig  App.tscn  Local Achievements.csproj  Local Achievements.sln  icon.svg.import  project.godot  rust.gdextension
godot/nodes/: Achievement.tscn  Game.tscn  PlatformTab.tscn  RetroAchievement.tscn  SteamAchievement.tscn
godot/resources/: GamePanelStyle.tres  GameTabPanelStyle.tres
godot/scripts/: GameTitle.cs
rust/: Cargo.toml
rust/src/: io.rs  lib.rs  macros.rs
rust/src/data/: achievement.rs  mod.rs  user.rs
rust/src/data/game/: game.rs  mod.rs  retroachievements.rs  steam.rs
rust/src/data/user/: mod.rs  retro.rs  steam.rs  user.rs
rust/src/nodes/: achievement.rs  app.rs  appdata.rs  game.rs  mod.rs  retroachievement.rs  steamachievement.rs
src/: constants.rs  hooks.rs  io.rs  macros.rs  main.rs  state.rs  util.rs
src/background/: dispatch.rs  mod.rs
src/battlenet/: mod.rs
src/battlenet/components/: content.rs  diablo3.rs  mod.rs  profile.rs  refresh.rs  settings.rs  starcraft2.rs  wow.rs  wowc.rs
src/battlenet/data/: games.rs  mod.rs  region.rs  user.rs
src/battlenet/platform/: api.rs  mod.rs  starcraft2.rs
src/components/: about.rs  achievement.rs  achievementlist.rs  app.rs  content.rs  game.rs  gamelist.rs  mod.rs  nav.rs  notifications.rs  numput.rs  platformdata.rs  profile.rs  steamdev.rs
src/components/buttons/: icon.rs
src/components/refresh/: auth.rs  confirm.rs  mod.rs
src/components/retroachievements/: achievement.rs  content.rs  game.rs  list.rs  mod.rs  profile.rs
src/components/settings/: local.rs  mod.rs  notifications.rs  retroachievements.rs  settings.rs  steam.rs  toggles.rs  ui.rs
src/components/steam/: achievement.rs  content.rs  game.rs  list.rs  mod.rs  profile.rs
src/data/: achievement.rs  data.rs  game.rs  mod.rs  radio.rs  retroachievements.rs  secure.rs  settings.rs  user.rs
src/data/game/: game.rs  retroachievements.rs
src/data/retroachievements/: achievement.rs  game.rs  kind.rs  mode.rs  rank.rs  system.rs  user.rs
src/data/state/: active.rs  app.rs  auth.rs  mod.rs  platform.rs  selected.rs  settings.rs  user.rs
src/data/steam/: achievement.rs  game.rs  playtime.rs  (+1 more)
src/egs/: mod.rs
src/gog/: mod.rs
src/net/: mod.rs  oauth.rs
src/retroachievements/: mod.rs
src/rpcs3/: mod.rs
src/steam/: mod.rs
(+265 files in other folders)
