[package]
authors = ["Peter Lunneberg"]
description = "A desktop application for collecting, storing, and tracking achievement data."
edition = "2021"
name = "local-achievements"
publish = false
version = "0.5.0"

[dependencies]
anyhow = "1"
byteorder = "1"
chrono = { version = "0", features = [ "serde" ] }
directories = "5"
image = "0.25"
path-slash = "0"
regex = "1"
reqwest = { version = "0.12.28", features = [ "json" ] } #Match version required by oauth2
saphyr = "0"
serde = "1"
serde_json = "1"
serde_url_params = "0"
serde-xml-rs = "0"
strum = "0"
strum_macros = "0"
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "sync" ] }
ureq = { version = "3", features = [ "json" ] } # synchronous requests only
urlencoding = "2"

# Freya and dependencies
freya = { version = "0.4.0-rc.17", features = [ "icons", "radio" ] }

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

# OAuth2 and authorization related
oauth2 = "5"
securestore = "0.100.0"
webbrowser = { version = "1", features = [ "hardened" ] }

[lints.rust]
non_snake_case = "allow"
non_upper_case_globals = "allow"

[package.metadata.appimage]
assets = [ "assets" ]
icon = "assets/icon.png"
desktop_entry = "local-achievements.desktop"
