[package]
authors = ["Peter Lunneberg"]
description = "A desktop application for collecting, storing, and tracking achievement data."
edition = "2024"
name = "reliquarian"
publish = false
version = "0.5.0"

[package.metadata.appimage]
assets = [ "assets" ]
desktop_entry = "reliquarian.desktop"
icon = "assets/icon.png"

[dependencies]
battlenet = { workspace = true }
components = { workspace = true }
data = { workspace = true }
epicgamesstore = { workspace = true }
gog = { workspace = true }
macros = { workspace = true }
net = { workspace = true }
retroachievements = { workspace = true }
rpcs3 = { workspace = true }
steam = { workspace = true }

freya = { workspace = true }
reqwest = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[lints]
workspace = true

[workspace]
resolver = "3"
members = [
	"crates/reliquarian-battlenet",
	"crates/reliquarian-components",
	"crates/reliquarian-data",
	"crates/reliquarian-epicgamesstore",
	"crates/reliquarian-gog",
	"crates/reliquarian-macros",
	"crates/reliquarian-net",
	"crates/reliquarian-retroachievements",
	"crates/reliquarian-rpcs3",
	"crates/reliquarian-steam",
]

[workspace.dependencies]
battlenet = { package="reliquarian-battlenet", path = "crates/reliquarian-battlenet", version = "0.5.0" }
components = { package="reliquarian-components", path = "crates/reliquarian-components", version = "0.5.0" }
data = { package="reliquarian-data", path = "crates/reliquarian-data", version = "0.5.0" }
epicgamesstore = { package="reliquarian-epicgamesstore", path = "crates/reliquarian-epicgamesstore", version = "0.5.0" }
gog = { package="reliquarian-gog", path = "crates/reliquarian-gog", version = "0.5.0" }
macros = { package="reliquarian-macros", path = "crates/reliquarian-macros", version = "0.5.0" }
net = { package="reliquarian-net", path = "crates/reliquarian-net", version = "0.5.0" }
retroachievements = { package="reliquarian-retroachievements", path = "crates/reliquarian-retroachievements", version = "0.5.0" }
rpcs3 = { package="reliquarian-rpcs3", path = "crates/reliquarian-rpcs3", version = "0.5.0" }
steam = { package="reliquarian-steam", path = "crates/reliquarian-steam", version = "0.5.0" }

anyhow = "1"
chrono = { version = "0", features = [ "serde" ] }
directories = "5"
path-slash = "0"
serde = "1"
serde_json = "1"
serde_url_params = "0"
serde-xml-rs = "0"
strum = "0"
strum_macros = "0"
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "sync" ] }

# Network requess
reqwest = { version = "0.12.28", features = [ "json" ] } #Match version required by oauth2
ureq = { version = "3", features = [ "json" ] } # synchronous requests only

# Freya and dependencies
freya = { version = "0.4.0-rc.17", features = [ "icons", "radio" ] }

# Logging
tracing = "0.1"

# OAuth2 and authorization related
oauth2 = "5"
webbrowser = { version = "1", features = [ "hardened" ] }

[workspace.lints.rust]
non_snake_case = "allow"
non_upper_case_globals = "allow"
