[package]
authors = ["Peter Lunneberg"]
edition = "2021"
name = "la-lib"
publish = false
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1"
chrono = "~0"
directories = "~5"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = [ "experimental-godot-api" ] }
path-slash = "~0"
reqwest = { version = "~0", features = [ "json" ] }
serde = { version = "~1", features = [ "derive" ] }
serde_json = "~1"

[lib]
crate-type = ["cdylib"]
