[package]
authors = ["Peter Lunneberg"]
edition = "2024"
name = "data"
version = "0.5.0"

[dependencies]
anyhow = { workspace = true }
directories = { workspace = true }
freya = { workspace = true }
image = "0.25"
reqwest = { workspace = true }
securestore = "0.100.0"
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }

[lints.rust]
non_snake_case = "allow"
non_upper_case_globals = "allow"
