[package]
authors = ["Peter Lunneberg"]
edition = "2024"
name = "net"
version = "0.5.0"

[dependencies]
data = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
freya = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
webbrowser = { workspace = true }

[lints.rust]
non_snake_case = "allow"
non_upper_case_globals = "allow"
