[package]
authors = ["Peter Lunneberg"]
edition = "2024"
name = "net"
publish = false
version = "0.5.0"

[dependencies]
data = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
freya = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
webbrowser = { workspace = true }

[lints]
workspace = true
