[package]
authors = ["Peter Lunneberg"]
edition = "2024"
name = "reliquarian-data"
publish = false
version = "0.5.0"

[dependencies]
anyhow = { workspace = true }
directories = { workspace = true }
freya = { workspace = true }
image = "0.25"
reqwest = { workspace = true }
securestore = "0.100.0"
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
