[package]
authors = ["Peter Lunneberg"]
edition = "2024"
name = "reliquarian-rpcs3"
publish = false
version = "0.5.0"

[dependencies]
components = { workspace = true }
data = { workspace = true }
macros = { workspace = true }
net = { workspace = true }

anyhow = { workspace = true }
byteorder = "1"
chrono = { workspace = true }
freya = { workspace = true }
saphyr = "0"
serde = { workspace = true }
serde_json = { workspace = true }
serde-xml-rs = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
