[package]
authors = ["Peter Lunneberg"]
edition = "2024"
name = "reliquarian-steam"
publish = false
version = "0.5.0"

[dependencies]
components = { workspace = true }
data = { workspace = true }
macros = { workspace = true }
net = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
freya = { workspace = true }
path-slash = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
webbrowser = { workspace = true }

[lints]
workspace = true
